@@ -1,0 +1,32 @@
+/*
+ * Copyright 2008 Islam Ahmed Zaid. All rights reserved.  <azismed@gmail.com>
+ * AsereBLN: 2009: cleanup and bugfix
+ */
+
+#ifndef __LIBSAIO_CPU_H
+#define __LIBSAIO_CPU_H
+
+#include "libsaio.h"
+
+extern void scan_cpu(PlatformInfo_t *);
+
+#define bit(n)			(1UL << (n))
+#define bitmask(h,l)		((bit(h)|(bit(h)-1)) & ~(bit(l)-1))
+#define bitfield(x,h,l)		(((x) & bitmask(h,l)) >> l)
+
+#define	IA32_PERF_STATUS	0x198
+#define MSR_FLEX_RATIO		0x194
+#define	MSR_PLATFORM_INFO	0xCE
+#define K8_FIDVID_STATUS	0xC0010042
+#define K10_COFVID_STATUS	0xC0010071
+
+#define DEFAULT_FSB		100000          /* for now, hardcoding 100MHz for old CPUs */
+
+// DFE: This constant comes from older xnu:
+#define CLKNUM			1193182		/* formerly 1193167 */
+
+// DFE: These two constants come from Linux except CLOCK_TICK_RATE replaced with CLKNUM
+#define CALIBRATE_TIME_MSEC	30		/* 30 msecs */
+#define CALIBRATE_LATCH		((CLKNUM * CALIBRATE_TIME_MSEC + 1000/2)/1000)
+
+#endif /* !__LIBSAIO_CPU_H */
